# fmm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  defaults.cmake  fmm.c  fmm.h
benchmarks/: CMakeLists.txt  avg.py  bench.sh  defaults.cmake  main.cpp
src/: fmm.c
